--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,20 @@
         "symfony/monolog-bundle": "^2.8",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "incenteev/composer-parameter-handler": "^2.0",
+        "lexik/jwt-authentication-bundle": "^1.4",
+        "friendsofsymfony/user-bundle": "^2.0@dev",
+        "jms/serializer-bundle": "^1.1",
+        "friendsofsymfony/rest-bundle": "^1.7",
+        "white-october/pagerfanta-bundle": "^1.0",
+        "willdurand/hateoas-bundle": "^1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^2.7"
+        "symfony/phpunit-bridge": "^2.7",
+        "hautelook/alice-bundle": "^1.1",
+        "doctrine/data-fixtures": "^1.1",
+        "liip/functional-test-bundle": "^1.4"
     },
     "scripts": {
         "post-install-cmd": [
