--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "symfony/phpunit-bridge": "^2.7",
         "hautelook/alice-bundle": "^1.1",
         "doctrine/data-fixtures": "^1.1",
-        "liip/functional-test-bundle": "^1.4"
+        "liip/functional-test-bundle": "^1.4",
+        "phpunit/phpunit": "^4.8"
     },
     "scripts": {
         "post-install-cmd": [
