--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,9 @@
         "jms/serializer-bundle": "^1.1",
         "friendsofsymfony/rest-bundle": "^1.7",
         "white-october/pagerfanta-bundle": "^1.0",
-        "willdurand/hateoas-bundle": "^1.1"
+        "willdurand/hateoas-bundle": "^1.1",
+        "phing/phing": "^2.13",
+        "squizlabs/php_codesniffer": "^2.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
@@ -40,7 +42,8 @@
         "hautelook/alice-bundle": "^1.1",
         "doctrine/data-fixtures": "^1.1",
         "liip/functional-test-bundle": "^1.4",
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "^4.8",
+        "doctrine/doctrine-fixtures-bundle": "^2.3"
     },
     "scripts": {
         "post-install-cmd": [
