--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
 <project name="puzzle" default="ci">
 
-    <target name="ci" depends="phpunit,phpcs"/>
+    <target name="ci" depends="phpunit,phpcs,phpmd"/>
     <target name="fix" depends="phpcbf"/>
 
     <target name="phpunit">
@@ -13,7 +13,8 @@
         <exec executable="./vendor/bin/phpcs" passthru="true" checkreturn="true">
             <arg value="-p"/>
             <arg value="--standard=PSR2"/>
-            <arg path="src/AppBundle/"/>
+            <arg path="src/"/>
+            <arg path="tests/"/>
         </exec>
     </target>
 
@@ -21,7 +22,16 @@
         <exec executable="./vendor/bin/phpcbf" passthru="true" checkreturn="true">
             <arg value="-p"/>
             <arg value="--standard=PSR2"/>
-            <arg path="src/AppBundle/"/>
+            <arg path="src/"/>
+            <arg path="tests/"/>
+        </exec>
+    </target>
+
+    <target name="phpmd">
+        <exec executable="./vendor/bin/phpmd" passthru="true" checkreturn="true">
+            <arg path="src/"/>
+            <arg value="text"/>
+            <arg value="phpmd.xml"/>
         </exec>
     </target>
 </project>
