--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,9 @@
     <target name="fix" depends="phpcbf"/>
 
     <target name="phpunit">
-        <exec executable="./vendor/bin/phpunit" passthru="true" checkreturn="true"/>
+        <exec executable="./vendor/bin/phpunit" passthru="true" checkreturn="true">
+            <!--<arg value="&#45;&#45;coverage-text"/>-->
+        </exec>
     </target>
 
     <target name="phpcs">
