--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -78,3 +78,8 @@ lexik_jwt_authentication:
     public_key_path:  %jwt_public_key_path%
     pass_phrase:      %jwt_key_pass_phrase%
     token_ttl:        %jwt_token_ttl%
+
+fos_rest:
+    routing_loader:
+        default_format: json
+        include_format: false
