--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -40,4 +40,5 @@ security:
 
     access_control:
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/votes, roles: ROLE_VOTER }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
