--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -83,3 +83,16 @@ fos_rest:
     routing_loader:
         default_format: json
         include_format: false
+
+nelmio_api_doc:
+    sandbox:
+        authentication:
+            name: Authorization
+            delivery: http
+            type: bearer
+        enabled:  true
+        accept_type: application/json
+        body_format:
+            formats: []
+        request_format:
+            default_format: json
