--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -83,6 +83,8 @@ fos_rest:
     routing_loader:
         default_format: json
         include_format: false
+    view:
+        view_response_listener: 'force'
 
 nelmio_api_doc:
     sandbox:
