--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: php
 php:
-  - 5.4
   - 5.5
   - 5.6
 before_script:
+  - mysql -e "create database IF NOT EXISTS symfony;" -uroot
   - composer install
 script:
   - ./vendor/bin/phing
