--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -28,3 +28,8 @@ doctrine:
 
 hautelook_alice:
     locale: fr_FR
+
+lexik_jwt_authentication:
+    private_key_path: '%kernel.root_dir%/../var/jwt/private-test.pem'
+    public_key_path:  '%kernel.root_dir%/../var/jwt/public-test.pem'
+    pass_phrase:      test
